Fixed location alignment bug.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -88,7 +88,7 @@
 			}
 			.my-location {
 				float: right;
-				clear: left;
+				clear: both;
 			}
 		}
 	}
